tests/error_004_entity_not_closed.test
START
hello = &nbsp
ERROR
.../error_004_entity_not_closed.input:1:9: error: entity is not closed
hello = &nbsp
        ^
END
